Fix grid on mobile

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -85,7 +85,6 @@
         padding: 5px 3px;
     }
     .statistics-container {
-        grid-template-columns: 30% auto 10%;
         padding-bottom: 20px;
         padding-top: 20px;
     }
